--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description" content="Little Lemon restaurant website"/>
+    <meta name="og:title" content="Little Lemon restaurant"/>
+    <meta name="og:description" content="Little Lemon restaurant"/>
+    <meta name="og:image" content=""/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
